[package]
name = "datafusion-table-provider-flight"
version = "0.1.0"
edition = "2021"
description = "DataFusion table providers for Arrow Flight and Flight SQL services"
repository = "https://github.com/datafusion-contrib/datafusion-table-provider-flight"
license = "Apache-2.0"

[dependencies]
arrow = "53.0.0"
arrow-array = "53.0.0"
arrow-cast = "53.0.0"
arrow-flight = { version = "53.0.0", features = ["flight-sql-experimental", "tls"] }
arrow-schema = { version = "53.0.0", features = ["serde"] }
async-trait = "0.1.81"
datafusion = "42.0.0"
datafusion-expr = "42.0.0"
datafusion-physical-expr = "42.0.0"
datafusion-physical-plan = "42.0.0"
datafusion-proto = "42.0.0"
futures = "0.3.30"
prost = "0.13.1" # pinned for arrow-flight compat
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.36", features = [
    "macros",
    "rt",
    "sync",
    "rt-multi-thread",
    "parking_lot",
    "fs",
] }
tonic = { version = "0.12.3", features = ["transport", "codegen", "prost", "tls", "tls-roots", "tls-webpki-roots"] }

[dev-dependencies]
tokio-stream = { version = "0.1.15", features = ["net"] }

[[example]]
name = "flight-sql"
path = "examples/flight-sql.rs"
